# review-company-api

./: .env  hello.py  main.py  pyproject.toml
app/: main.py
app/config/: default_config.py
app/crud/: reviews.py
app/db/: session.py
app/models/: review.py
app/schemas/: review.py
dbcontext/: models.py  mydbconnector.py  review_repository.py
services/: dbconnector.py  mysql_connector.py  review_services.py
